Assignment: Disco Grid

--- a/block-BJaael/code/index.html
+++ b/block-BJaael/code/index.html
@@ -12,7 +12,10 @@
   </head>
   <body>
     <h1 class="heading">🤯 Disco Grid 🤩</h1>
-
+    <ul></ul>
+    <!-- <ul>
+      <li class="small-boxes"></li>
+    </ul> -->
     <script src="./script.js"></script>
   </body>
 </html>
