--- a/block-BJaaeo/code/index.html
+++ b/block-BJaaeo/code/index.html
@@ -22,7 +22,7 @@
           <div class="box add flex-24 btn">+</div>
           <div class="box sub flex-24 btn">-</div>
           <div class="box mul flex-24 btn">*</div>
-          <div class="box div flex-24 btn">%</div>
+          <div class="box div flex-24 btn">/</div>
         </div>
   
         <div class="flex">
