--- a/block-BJaaer/code/index.html
+++ b/block-BJaaer/code/index.html
@@ -41,7 +41,7 @@
           <input
             id="color"
             type="color"
-            name="email"
+            name="color"
             placeholder="Enter your email"
           />
         </div>
@@ -52,7 +52,7 @@
             type="range"
             max="10"
             step="1"
-            name="email"
+            name="rating"
             placeholder="Enter your email"
           />
         </div>
@@ -91,6 +91,16 @@
         </div>
         <button type="submit">Submit</button>
       </form>
+    </div>
+    <div class="display container">
+      <button class="close-btn ">X</button>
+      <h1></h1>
+      <p class="email"></p>
+      <p class="interest"></p>
+      <p class="color"></p>
+      <p class="rating"></p>
+      <p class="genre"></p>
+      <p class="term"></p>   
     </div>
     <script src="./script.js"></script>
   </body>
