--- a/block-BJaafa/code/index.html
+++ b/block-BJaafa/code/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <script src="./script.js"></script>
+    <div id="insert">
+      <div class="key">
+        Press any key to get the keyCode
+      </div>
+    </div>
+    <script src="script.js"></script>
   </body>
 </html>
